--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Subscription App</title>
     <link href="./style.css" rel="stylesheet">
-    <script src="sub.js"></script>
+<!--     <script src="sub.js"></script> -->
 </head>
 <body>
 
