--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h3 style="color: Grey;">Gain access to our full library of tutorials along with expert code review. Perfect for<br>any developers who are serious about honing their skills.</h3>
                 </center>
             </div>
-            <div class="merg">
+            <!-- <div class="merg"> -->
                 <div class="card" style="color: white;">
                     <center>
                     <h2>Monthyly Subscription</h2>
@@ -34,7 +34,7 @@
                     <p style="font-size: x-large;">Tutorials by industry experts<br>Peer & expert code review<br>Coding excercises<br>Access yo our GitHub repos<br>Community forum<br>Flashcard decks</p>
                     </center>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
 
 </body>
